// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SelectBox] should not operate rotate animation when shouldRotate props is false 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    activeOpacity={1}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 30,
            "justifyContent": "center",
            "width": 200,
          },
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
            },
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
            },
            Object {
              "includeFontPadding": false,
            },
          ]
        }
      >
        item1
      </Text>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "black",
                },
                undefined,
              ],
              Object {
                "fontFamily": "IcoMoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "position": "absolute",
        }
      }
    />
  </View>
</View>
`;

exports[`[SelectBox] should render without crashing 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    activeOpacity={1}
    onPress={[Function]}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 30,
            "justifyContent": "center",
            "width": 200,
          },
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
            },
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
            },
            Object {
              "includeFontPadding": false,
            },
          ]
        }
      >
        item1
      </Text>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "position": "absolute",
        }
      }
    />
  </View>
</View>
`;
